[package]
name = "llm-shield"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
pyo3 = { version = "0.21", features = ["auto-initialize", "extension-module"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
